--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -4,6 +4,9 @@ managed:
   override:
     - file_option: go_package_prefix
       value: github.com/ChristianGaertner/connect-rpc-demo/proto
+  disable:
+    - file_option: go_package
+      module: buf.build/bufbuild/protovalidate
 plugins:
   - remote: buf.build/protocolbuffers/go
     out: proto
