--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -14,5 +14,9 @@ plugins:
   - remote: buf.build/connectrpc/go
     out: proto
     opt: paths=source_relative
+  - remote: buf.build/bufbuild/es:v2.2.0
+    out: webclient/src/proto
+    include_imports: true
+    opt: target=ts
 inputs:
   - directory: proto
